--- a/rpiBroker/templates/registro.html
+++ b/rpiBroker/templates/registro.html
@@ -17,7 +17,19 @@
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasena">
+          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasenia">
+        </div>
+        <div class="form-group">
+          <label>Nombre completo</label>
+          <input type="text" class="form-control" id="password" name="nombre_completo" placeholder="Nombre completo">
+        </div>
+        <div class="form-group">
+          <label>Numero telefono</label>
+          <input type="text" class="form-control" id="password" name="numero_telefono" placeholder="Numero">
+        </div>
+        <div class="form-group">
+          <label>Direccion</label>
+          <input type="text" class="form-control" id="password" name="direccion" placeholder="Direccion Ej; Calle Kutxi..N*2">
         </div>
         <button type="submit" >Registrarse</button>
         {% if feedback %}
