--- a/rpiBroker/templates/base.html
+++ b/rpiBroker/templates/base.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="static/styles/style.css" />
     <title>{% block titulo %}{% endblock %}</title>
 </head>
+
 <body>
     <header >
-        <h1>Servicio Web</h2>
+        <div class="fondo-encabezado" >
+            <div class="titulo">
+                <h1>Servicio Web</h1>
+            </div>
+        </div>    
     </header>
+
+
     <main>
-        {% block contenido %}{% endblock %}
+        <div class="contenido-main" id="index-image">
+            {% block contenido %}{% endblock %}
+        </div>    
     </main>
+
+
     <footer>
-        <p>Esto es un footer!</p>
+        <div class="contenido-footer">
+            <p>Esto es un footer!</p>
+        </div>
     </footer>
 </body>
 </html>
