--- a/rpiBroker/templates/index.html
+++ b/rpiBroker/templates/index.html
@@ -1,74 +1,36 @@
-
-
 {% extends "base.html" %}
 {% block titulo %}Index{% endblock %} 
 {% block contenido %}
 
-<div class="base cabecera">
-<header id="header" class="clear"> 
 
-    <div id="group_cabecera">
-        <img src="images/Robokat.png" alt="Favicon Robokat">
+<div class="contenido-main" id="index-image">
+    <div id="articulo-index">
+      <h2>Inicio Sesion</h2>
+      <hr>
+
+    <div id="form-index">
+      <form action="/" method="POST">
+        <div id="form-group">
+          <label>Username: </label>
+          <input type="text" class="form-control" id="username" name="nombre" placeholder="Introduce tu nombre de usuario">
+        </div>
+        <div class="form-group">
+          <label>Password: </label>
+          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasena">
+        </div>
+        <button type="submit" class="btn btn-primary">Sign up</button>
+        {% if feedback %}
+        <p class="text-danger float-right">{{ feedback }}</p>
+        {% endif %}
+      </form>
     </div>
 
 
-    <nav> <!--representa una sección cuyo propósito es proporcionar enlaces de navegación-->  
-      
-      <ul>
-        <li><a href="Roboti.html">RoboKat</a></li>
-        <li><a href="Contact.html">Contáctanos</a></li>
-      </ul>
-    </nav>
-
-</header>
-</div>
-
-
-
-<div class="base row2">
-<div id="contenido" class="clear">
-    
-    <h1>INICIO DE <strong>SESION</strong></h1><br><br> 
-
-    <section id="acceso" class="clear">
-
-        <article>
-            <form action="/" method="POST" class="clear" ></form>
-                <label>Username</label>
-                <input type="text" class="form-control" id="username" name="nombre" placeholder="Introduce tu nombre de usuario">
-          
-                <label>Password</label>
-                <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasena">
-        
-                <button type="submit" id="submit">Sign up</button>
-
-                {% if feedback %}
-                <p class="text-danger float-right">{{ feedback }}</p>
-                {% endif %}   
-            </form>
-
-            <form method="GET" action="/registro" class= "clear">
-                <button type="submit" id= "submit" >Registrarse</button>
-              </form>
-        </article>
-    
-        <article class="acceso last"> 
-            <figure><img src="images/acceso.jpg" alt="dibujo acceso" width="350"></figure>
-        </article>    
-    </section>
-
-</div>
-</div>
-
-
-    <div class="base row4">
-        <footer id="copyright" class="clear">
-        <p class="foot_left">Copyright &copy; 2020 <a href="Roboti.html">RoboKat</a> | All Rights Reserved</p>
-        <p class="foot_right"><a href="www.facebook.com"><img src="images/face.png" width="35" alt="facebook"></a>
-                            <a href="www.twitter.com"><img src="images/twit.png" width="50" alt="twitter"></a> 
-                            <a href="www.instagram.com"><img src="images/inst.png" width="35" alt="instagram"></a>
-      </p>
-    </footer>
+      <form method="GET" action="/registro" id= "form-index">
+          <button type="submit" >Registrarse</button>
+        </form>
+    </div>
   </div>
-</body>
-</html>
+</div>
+{% endblock %}
+
