--- a/rpiBroker/static/styles/style.css
+++ b/rpiBroker/static/styles/style.css
@@ -1,200 +1,194 @@
 html,
+    body {
+        height: 100%;
+        min-height: 100% !important;
+        background-color: #333;
+    }
+    
+    * {
+        box-sizing: border-box;
+        font-family: Trebuchet MS, Verdana, "sans-serif";
+        border: 0;
+        padding: 0;
+        margin: 0;
+    }
+    
+    header {
+        height: 10%;
+        max-height: 67px;
+    }
+    
+    main {
+        height: 75%;
+    }
+    
+    footer {
+        min-height: 15%;
+    }
 
-body {
-    min-height: 100% !important;
-    background-color: #333;
-    display:block; 
-    width:960px; 
-    margin:0 auto;
-}
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    
+    header .fondo-encabezado {
+        background-color: #333;
+        width: 100%;
+        height: 100%;
+        display: inline-flex;
+        color: white;
+    }
 
-* {
-    box-sizing: border-box;
-    font-family: Trebuchet MS, Verdana, "sans-serif";
-    border: 0;
-    padding: 0;
-    margin: 0;
-}
+    .titulo {
+        padding-top: 14px;
+        margin: 0 auto; 
+    }
+    
+    .boton-encabezado {
+        width: 90px;
+        height: 30px;
+    }
+    
+    .botones-header {
+        margin-left: 50px;
+        padding-top: 15px; 
+        margin-right: 10px; 
+        justify-content: center;
+        width: 380px; 
+    }
 
-header {
-    height: 10%;
-    max-height: 67px;
-    display:block; width:960px; margin:0 auto;
-}
+    #boton-form {
+        width: 90px;
+        height: 30px;
+    }
+    
+    .iconos {
+        display: inline-flex;
+        padding-top: 15px;
+    }
+    
+    .icono {
+        width: 40px;
+        height: 40px;
+        padding-right: 7px;
+    }
+    
+    .texto-encabezado {
+        text-align: left;
+        padding-top: 5px;
+        padding-left: 10px;
+        padding-right: 30px;
+    }
 
-main {
-    height: 75%;
-}
+    #form-index {
+        padding-top: 50px;
+        padding-right: 50px;
+    }
 
-footer {
-    min-height: 15%;
-    display:block; width:960px; margin:0 auto;
-}
+    #titulo-form {
+        text-align: center;
+    }
+    #articulo-lista-incidencias,
+    #articulo-index {
+        padding-top: 50px;
+        padding-right: 50px;
+        padding-left: 50px;
+        max-width: 600px;
+        margin-right: 300px;
+    }
+    
+    footer .contenido-footer {
+        box-sizing: border-box;
+        background-color: #333;
+        color: white;
+        width: 100%;
+        padding-top: 10px;
+        text-align: center;
+    }
+    
+    main .contenido-main {
+        width: 100%;
+        height: 100%;
+        display: inline-flex;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        color: #ffffb3;
+    }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
+    #index-image {
+        background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-tech-line-background-simple-technology-business-image_22642.jpg);
+    }
 
-header .fondo-encabezado {
-    background-color: #333;
-    width: 100%;
-    height: 100%;
-    display: inline-flex;
-    color: white;
-}
+    #incidencias-image {
+        background-image: url(https://cdn.hipwallpaper.com/i/65/26/ZFbMTg.jpg);
+    }
 
-.titulo {
-    padding-top: 14px;
-    margin: 0 auto; 
-}
+    #main-incidencias,
+    #nueva-image {
+        background-image: url(https://c1.wallpaperflare.com/preview/447/559/773/laser-cutting-machine-plasma.jpg);
+    }
 
-.boton-encabezado {
-    width: 90px;
-    height: 30px;
-}
-
-.botones-header {
-    margin-left: 50px;
-    padding-top: 15px; 
-    margin-right: 10px; 
-    justify-content: center;
-    width: 380px; 
-}
-
-#boton-form {
-    width: 90px;
-    height: 30px;
-}
-
-.iconos {
-    display: inline-flex;
-    padding-top: 15px;
-}
-
-.icono {
-    width: 40px;
-    height: 40px;
-    padding-right: 7px;
-}
-
-.texto-encabezado {
-    text-align: left;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-right: 30px;
-}
-
-#form-index {
-    padding-top: 50px;
-    padding-right: 50px;
-}
-
-#titulo-form {
-    text-align: center;
-}
-#articulo-lista-incidencias,
-#articulo-index {
-    padding-top: 50px;
-    padding-right: 50px;
-    padding-left: 50px;
-    max-width: 600px;
-    margin-right: 300px;
-}
-
-footer .contenido-footer {
-    box-sizing: border-box;
-    background-color: #333;
-    color: white;
-    padding-top: 10px;
-    text-align: center;
-    display:block; 
-    width:960px; 
-    margin:0 auto;
-}
-
-main .contenido-main {
-    width: 960px;
-    display: inline-flex;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    color: #ffffb3;
-}
-
-#index-image {
-    background-image: url(https://image.freepik.com/vector-gratis/conexion-internet-sentido-abstracto-ciencia-fondo_41981-1306.jpg);
-}
-
-#incidencias-image {
-    background-image: url(https://cdn.hipwallpaper.com/i/65/26/ZFbMTg.jpg);
-}
-
-#main-incidencias,
-#nueva-image {
-    background-image: url(https://c1.wallpaperflare.com/preview/447/559/773/laser-cutting-machine-plasma.jpg);
-}
-
-#detalle-image {
-    background-image: url(https://www.findlight.net/blog/wp-content/uploads/2016/10/laser-marking.jpg);
-}
+    #detalle-image {
+        background-image: url(https://www.findlight.net/blog/wp-content/uploads/2016/10/laser-marking.jpg);
+    }
 
 
-#form-nueva-incidencia {
-    padding-top: 40px;
-    padding-right: 100px;
-    padding-left: 200px;
-    color: black;
-}
+    #form-nueva-incidencia {
+        padding-top: 40px;
+        padding-right: 100px;
+        padding-left: 200px;
+        color: black;
+    }
 
-#boton-form-incidencias {
-    width: 80px;
-    height: 30px;
-    background-color: #00e673;
-    color:black;
-}
+    #boton-form-incidencias {
+        width: 80px;
+        height: 30px;
+        background-color: #00e673;
+        color:black;
+    }
 
-#form-titulo-background,
-#form-background {
-    color: #ffffb3;
-}
+    #form-titulo-background,
+    #form-background {
+        color: #ffffb3;
+    }
 
-#tabla-lista-incidencias {
-    color: #ffffb3;
-    background-color: #333;
-    padding: 10px;;
-    opacity: 0.8;
-}
+    #tabla-lista-incidencias {
+        color: #ffffb3;
+        background-color: #333;
+        padding: 10px;;
+        opacity: 0.8;
+    }
 
-#tabla-lista-incidencias th,
-#tabla-lista-incidencias p,
-#tabla-lista-incidencias a,
-#tabla-lista-incidencias img {
-    width: 110px;
-    text-align: center;
-    font-size: 14px;
-    padding: 2px;
-}
+    #tabla-lista-incidencias th,
+    #tabla-lista-incidencias p,
+    #tabla-lista-incidencias a,
+    #tabla-lista-incidencias img {
+        width: 110px;
+        text-align: center;
+        font-size: 14px;
+        padding: 2px;
+    }
 
-#contenido-detalle-incidencias {
-    background-color: #333;
-    margin: 50px;
-    margin-right: 250px;
-    padding: 20px;
-    opacity: 0.8;
-    font-size: 14px;
-}
+    #contenido-detalle-incidencias {
+        background-color: #333;
+        margin: 50px;
+        margin-right: 250px;
+        padding: 20px;
+        opacity: 0.8;
+        font-size: 14px;
+    }
 
-#maquina-imagen {
-    height: 300px;;
-    width: 300px;
-} 
+    #maquina-imagen {
+        height: 300px;;
+        width: 300px;
+    } 
 
-#contenido-sidebar-foto {
-    background-color: #333;
-    margin: 50px;
-    margin-top: 100px;
-    padding: 20px;
-    opacity: 0.8;
-}
+    #contenido-sidebar-foto {
+        background-color: #333;
+        margin: 50px;
+        margin-top: 100px;
+        padding: 20px;
+        opacity: 0.8;
+    }
