--- a/rpiBroker/templates/base.html
+++ b/rpiBroker/templates/base.html
@@ -21,7 +21,7 @@
 
 
     <main>
-        <div>
+        <div class="contenido-main">
             {% block contenido %}{% endblock %}
         </div>    
     </main>
@@ -30,10 +30,7 @@
 
     <div class="contenido-footer">
         <footer id="copyright" class="clear">
-        <p class="foot_left">Copyright &copy; 2020 <a href="principal.html">RoboKat</a> | All Rights Reserved</p>
-        <p class="foot_right"><a href="www.facebook.com"><img src="images/face.png" width="35" alt="facebook"></a>
-                              <a href="www.twitter.com"><img src="images/twit.png" width="50" alt="twitter"></a> 
-                              <a href="www.instagram.com"><img src="images/inst.png" width="35" alt="instagram"></a>
+        <p class="foot_left">Copyright &copy; 2020 <a href="principal.html">Demotoy</a> | All Rights Reserved</p>
         </p>
         </footer>
     </div>
