--- a/rpiBroker/templates/principal.html
+++ b/rpiBroker/templates/principal.html
@@ -13,6 +13,36 @@
       <form action="/principal" method="POST">
         <button type="submit" class="btn btn-primary">Apagar luz</button>
       </form>
+      <form action="/principal" method="POST">
+        <div class="form-group">
+          <label>Username</label>
+          <input type="text" class="form-control" id="username" name="nombre" placeholder="Introduce tu nombre de usuario">
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email">
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasenia">
+        </div>
+        <div class="form-group">
+          <label>Nombre completo</label>
+          <input type="text" class="form-control" id="password" name="nombre_completo" placeholder="Nombre completo">
+        </div>
+        <div class="form-group">
+          <label>Numero telefono</label>
+          <input type="text" class="form-control" id="password" name="numero_telefono" placeholder="Numero">
+        </div>
+        <div class="form-group">
+          <label>Direccion</label>
+          <input type="text" class="form-control" id="password" name="direccion" placeholder="Direccion Ej; Calle Kutxi..N*2">
+        </div>
+        <button type="submit" >Registrarse</button>
+        {% if feedback %}
+        <p class="text-danger float-right">{{ feedback }}</p>
+        {% endif %}
+      </form>
     </div>
   </div>
 </div>
