--- a/rpiBroker/templates/base.html
+++ b/rpiBroker/templates/base.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-        <header id="header" class="clear"> 
+        <header id="header" class="clear">
             <div class="fondo-encabezado" >
                 <div class="botones-header">
                 <div id="group_cabecera">
             </div>
-
-                <h2>Servicio Web</h2>
+                <h2 id="tituli">DEMOTOY</h2>
             </div>    
         </header>
 
