Porfin mas bonito

--- a/rpiBroker/templates/base.html
+++ b/rpiBroker/templates/base.html
@@ -10,10 +10,7 @@
 
 <body>
         <header id="header" class="clear">
-            <div class="fondo-encabezado" >
-                <div class="botones-header">
-                <div id="group_cabecera">
-            </div>
+            <div>
                 <h2 id="tituli">DEMOTOY</h2>
             </div>    
         </header>
@@ -27,7 +24,7 @@
 
 
 
-    <div class="contenido-footer">
+    <div class="contenido-footer" >
         <footer id="copyright" class="clear">
         <p class="foot_left">Copyright &copy; 2020 <a href="principal.html">Demotoy</a> | All Rights Reserved</p>
         </p>
