--- a/rpiBroker/templates/index.html
+++ b/rpiBroker/templates/index.html
@@ -11,11 +11,12 @@
         <br>
         <div id="form-group">
           <label id="form-label">Username: </label>
-          <input type="text" class="form-label" id="username" name="nombre" placeholder="Introduce tu nombre de usuario">
+          <input type="text" class="form-control" id="username" name="nombre" placeholder="Usuario">
         </div>
+        <br>
         <div class="form-group">
           <label id="form-label">Password: </label>
-          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasena">
+          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contraseña">
         </div>
         <br>
         <button type="submit" id="boton">Sing In</button>
