--- a/rpiBroker/static/styles/style.css
+++ b/rpiBroker/static/styles/style.css
@@ -99,15 +99,19 @@ html,
         margin-right: 300px;
     }
     
-    footer .contenido-footer {
+    .contenido-footer {
         box-sizing: border-box;
         background-color: #333;
         color: white;
         width: 100%;
         padding-top: 10px;
-        text-align: center;
+        margin-bottom: 10px;
+        text-align: center;    
     }
     
+
+
+
     main .contenido-main {
         width: 100%;
         height: 100%;
@@ -191,26 +195,35 @@ html,
     }
 
     #tituli {
-        background: linear-gradient(135deg, #6A8FF0 0%, #5f387b 100%);
-        color: white;
-        font-size: 24px;
+        color: linear-gradient(135deg, #6A8FF0 0%, #5f387b 100%);
+        font-size: 28px;
         text-align: center;
-        width: 50%;
-        margin: 10px;
-        padding: 10px;
-        
     }
 
     #form-label{
         color:rgb(255, 255, 255); 
     }
+    
+    .form-control {
+        padding:7px;
+        border-radius:10px;
+    }
 
     #boton {
-        width: 80px;
-        height: 50%;
+        width: 30%;
+        height: 40px;
         border-radius: 20px;
         background: linear-gradient(135deg, #6A8FF0 0%, #5e16d1 100%);
         color: white;
 
     }
+
+    footer a{
+		color: white;
+		text-decoration: none;
+		}
+
+	footer a:hover {
+		color: rgb(100, 48, 136);
+		}
 
