--- a/rpiBroker/templates/base.html
+++ b/rpiBroker/templates/base.html
@@ -12,6 +12,7 @@
         <header id="header" class="clear">
             <div>
                 <h2 id="tituli">DEMOTOY</h2>
+                {% block menu %}{% endblock %}}
             </div>    
         </header>
 
