--- a/rpiBroker/templates/principal.html
+++ b/rpiBroker/templates/principal.html
@@ -1,40 +1,64 @@
 {% extends "base.html" %}
-{% block titulo %}Index{% endblock %} 
+
+
+{% block titulo %}Principal{% endblock %} 
+
+{% block menu %} 
+
+<nav id="nav">
+  <a href="http://127.0.0.1:5000/index" ><span>Inicio</span></a>
+  <a href="http://127.0.0.1:5000/registro" ><span>Registro</span></a>
+  <a href="http://127.0.0.1:5000/monitorizacion" ><span>Monitorizacion</span></a>
+</nav>
+
+{% endblock %} 
+
+
+
+
+
+
+
 {% block contenido %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>Inicio Sesion</h2>
-      <p>Temperatura CPU: {{ cpu }}</p>
+
+<div class="contenido-main" id="prin-image">
+
+  <h2>Principal</h2>
+  <p>Temperatura CPU: {{ cpu }}</p>
+
+  <br>
+  <div id="articulo-index">
+    <div id="form-index">
       <form action="/" method="GET">
-        <button type="submit" class="btn btn-primary">Log out</button>
+        <button type="submit" id="boton">Log out</button>
       </form>
+
       <form action="/principal" method="POST">
         <div class="form-group">
           <label>Username</label>
-          <input type="text" class="form-control" id="username" name="nombre" value = {{ usuario.nombre }}>
+          <input type="text" id="form-label" id="username" name="nombre" value={{ usuario.nombre }}>
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="email" class="form-control" id="email" name="email" value = {{ usuario.email }}>
+          <input type="email" id="form-label" id="email" name="email" value={{ usuario.email }}>
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-control" id="password" name="contrasenia" value = {{ contrasenia }}>
+          <input type="password" id="form-label" id="password" name="contrasenia" value={{ contrasenia }}>
         </div>
         <div class="form-group">
           <label>Nombre completo</label>
-          <input type="text" class="form-control" id="password" name="nombre_completo" value = {{ usuario.nombre_completo }}>
+          <input type="text" id="form-label" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
         </div>
         <div class="form-group">
           <label>Numero telefono</label>
-          <input type="text" class="form-control" id="password" name="numero_telefono" value = {{ usuario.numero_telefono }}>
+          <input type="text" id="form-label" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
         </div>
         <div class="form-group">
           <label>Direccion</label>
-          <input type="text" class="form-control" id="password" name="direccion" value = {{ usuario.direccion }}>
+          <input type="text" id="form-control" id="password" name="direccion" value={{ usuario.direccion }}>
         </div>
-        <button type="submit" >Modificar cuenta</button>
+        <button type="submit" id="boton">Modificar cuenta</button>
         {% if feedback %}
         <p class="text-danger float-right">{{ feedback }}</p>
         {% endif %}
@@ -42,4 +66,5 @@
     </div>
   </div>
 </div>
+
 {% endblock %}
