--- a/rpiBroker/templates/registro.html
+++ b/rpiBroker/templates/registro.html
@@ -1,37 +1,44 @@
 {% extends "base.html" %}
 {% block titulo %}Registro{% endblock %} 
 {% block contenido %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>Registro usuario</h2>
-      <hr>
+
+
+<div class="contenido-main" id="index-image">
+  <div id="articulo-index">
+      <h2 id="form-label">Registro de usuario</h2>
+      <br>
       <form action="/registro" method="POST">
         <div class="form-group">
-          <label>Username</label>
-          <input type="text" class="form-control" id="username" name="nombre" placeholder="Introduce tu nombre de usuario">
+          <label id = "form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="nombre" placeholder="Usuario">
         </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email">
+        <br>
+        <div class="form-group">   
+          <label id = "form-label">Email   </label>
+          <input type="email" class="form-control" id="email" name="email" placeholder="Email">
         </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contrasenia">
+        <br>
+        <div class="form-group">   
+          <label id = "form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="contrasenia" placeholder="Contraseña">
         </div>
-        <div class="form-group">
-          <label>Nombre completo</label>
+        <br>
+        <div class="form-group">   
+          <label id = "form-label">Nombre  </label>
           <input type="text" class="form-control" id="password" name="nombre_completo" placeholder="Nombre completo">
         </div>
-        <div class="form-group">
-          <label>Numero telefono</label>
-          <input type="text" class="form-control" id="password" name="numero_telefono" placeholder="Numero">
+        <br>
+        <div class="form-group">   
+          <label id ="form-label"> Telefono</label>
+          <input type="text" class="form-control" id="password" name="numero_telefono" placeholder="Telefono">
         </div>
-        <div class="form-group">
-          <label>Direccion</label>
+        <br>
+        <div class="form-group">   
+          <label id = "form-label">Direccion</label>
           <input type="text" class="form-control" id="password" name="direccion" placeholder="Direccion Ej; Calle Kutxi..N*2">
         </div>
-        <button type="submit" >Registrarse</button>
+        <br>
+        <button type="submit" id="boton">Registrarse</button>
         {% if feedback %}
         <p class="text-danger float-right">{{ feedback }}</p>
         {% endif %}
