--- a/rpiBroker/templates/principal.html
+++ b/rpiBroker/templates/principal.html
@@ -13,12 +13,6 @@
 
 {% endblock %} 
 
-
-
-
-
-
-
 {% block contenido %}
 
 <div class="contenido-main" id="prin-image">
@@ -36,23 +30,23 @@
       <form action="/principal" method="POST">
         <div class="form-group">
           <label>Username</label>
-          <input type="text" id="form-label" id="username" name="nombre" value={{ usuario.nombre }}>
+          <input type="text" id="form-control" id="username" name="nombre" value={{ usuario.nombre }}>
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="email" id="form-label" id="email" name="email" value={{ usuario.email }}>
+          <input type="email" id="form-control" id="email" name="email" value={{ usuario.email }}>
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" id="form-label" id="password" name="contrasenia" value={{ contrasenia }}>
+          <input type="password" id="form-control" id="password" name="contrasenia" value={{ contrasenia }}>
         </div>
         <div class="form-group">
           <label>Nombre completo</label>
-          <input type="text" id="form-label" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
+          <input type="text" id="form-control" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
         </div>
         <div class="form-group">
           <label>Numero telefono</label>
-          <input type="text" id="form-label" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
+          <input type="text" id="form-control" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
         </div>
         <div class="form-group">
           <label>Direccion</label>
