--- a/rpiBroker/templates/principal.html
+++ b/rpiBroker/templates/principal.html
@@ -35,29 +35,36 @@
 
       <form action="/principal" method="POST">
         <div class="form-group">
-          <label>Username</label>
-          <input type="text" id="form-label" id="username" name="nombre" value={{ usuario.nombre }}>
+          <label id="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="nombre" value={{ usuario.nombre }}>
         </div>
+        <br>
         <div class="form-group">
-          <label>Email</label>
-          <input type="email" id="form-label" id="email" name="email" value={{ usuario.email }}>
+          <label id="form-label">Email</label>
+          <input type="email" class="form-control" id="email" name="email" value={{ usuario.email }}>
         </div>
+        <br>
         <div class="form-group">
-          <label>Password</label>
-          <input type="password" id="form-label" id="password" name="contrasenia" value={{ contrasenia }}>
+          <label id="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="contrasenia" value={{ contrasenia }}>
         </div>
+        <br>
         <div class="form-group">
-          <label>Nombre completo</label>
-          <input type="text" id="form-label" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
+          <label id="form-label">Nombre completo</label>
+          <input type="text"  class="form-control" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
         </div>
+        <br>
         <div class="form-group">
-          <label>Numero telefono</label>
-          <input type="text" id="form-label" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
+          <label id="form-label">Telefono</label>
+          <input type="text"  class="form-control" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
         </div>
+        <br>
         <div class="form-group">
-          <label>Direccion</label>
-          <input type="text" id="form-control" id="password" name="direccion" value={{ usuario.direccion }}>
+          <label id="form-label">Direccion</label>
+          <input type="text"  class="form-control" id="password" name="direccion" value={{ usuario.direccion }}>
         </div>
+        <br>
+
         <button type="submit" id="boton">Modificar cuenta</button>
         {% if feedback %}
         <p class="text-danger float-right">{{ feedback }}</p>
