--- a/rpiBroker/templates/index.html
+++ b/rpiBroker/templates/index.html
@@ -23,14 +23,12 @@
         {% if feedback %}
         <p class="text-danger float-right">{{ feedback }}</p>
         {% endif %}
-      
-      <form method="GET" action="/registro" id= "form-index">
-            <button id = "boton" type="submit" >Registro</button>
       </form>
-    </form>
+      <form method="GET" action="/registro" id= "form-index">
+          <button id = "boton" type="submit" >Registrarse</button>
+      </form>
     </div>
   </div>
-</div>
 </div>
 {% endblock %}
 
