--- a/rpiBroker/templates/registro.html
+++ b/rpiBroker/templates/registro.html
@@ -43,6 +43,10 @@
         <p class="text-danger float-right">{{ feedback }}</p>
         {% endif %}
       </form>
+      <br>
+      <form action="/" method="GET">
+        <button type="submit" id="boton">Volver</button>
+      </form>
     </div>
   </div>
 </div>
