--- a/rpiBroker/templates/principal.html
+++ b/rpiBroker/templates/principal.html
@@ -1,70 +1,66 @@
 {% extends "base.html" %}
-
-
 {% block titulo %}Principal{% endblock %} 
-
 {% block menu %} 
-
 <nav id="nav">
   <a href="http://127.0.0.1:5000/index" ><span>Inicio</span></a>
   <a href="http://127.0.0.1:5000/registro" ><span>Registro</span></a>
   <a href="http://127.0.0.1:5000/monitorizacion" ><span>Monitorizacion</span></a>
 </nav>
-
 {% endblock %} 
 
 {% block contenido %}
 
 <div class="contenido-main" id="prin-image">
-
-  <h2>Principal</h2>
-  <p>Temperatura CPU: {{ cpu }}</p>
-
+  <h2 id="form-label" text-align="right">Pagina principal</h2>
+  <p id="form-label" text-align="right">Temperatura CPU: {{ cpu }}</p>
   <br>
   <div id="articulo-index">
     <div id="form-index">
       <form action="/" method="GET">
         <button type="submit" id="boton">Log out</button>
       </form>
-
+      <br>
       <form action="/principal" method="POST">
         <div class="form-group">
-          <label>Username</label>
-          <input type="text" id="form-control" id="username" name="nombre" value={{ usuario.nombre }}>
-        </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input type="email" id="form-control" id="email" name="email" value={{ usuario.email }}>
+          <label id="form-label">Username</label>
+          <input type="text" class="form-control" name="nombre" value={{ usuario.nombre }}>
         </div>
         <br>
         <div class="form-group">
-          <label>Password</label>
-          <input type="password" id="form-control" id="password" name="contrasenia" value={{ contrasenia }}>
+          <label id="form-label">Email</label>
+          <input type="email" class="form-control" name="email" value={{ usuario.email }}>
         </div>
         <br>
         <div class="form-group">
-          <label>Nombre completo</label>
-          <input type="text" id="form-label" id="password" name="nombre_completo" value={{ usuario.nombre_completo }}>
+          <label id="form-label">Contraseña</label>
+          <input type="password" class="form-control" name="contrasenia" value={{ contrasenia }}>
         </div>
         <br>
         <div class="form-group">
-          <label>Numero telefono</label>
-          <input type="text" id="form-label" id="password" name="numero_telefono" value={{ usuario.numero_telefono }}>
+          <label id="form-label">Nombre completo</label>
+          <input type="text" class="form-control" name="nombre_completo" value={{ usuario.nombre_completo }}>
+        </div>
+        <br>
+        <div class="form-group">
+          <label id="form-label">Numero telefono</label>
+          <input type="text" class="form-control" name="numero_telefono" value={{ usuario.numero_telefono }}>
         </div>
         <br>
         <div class="form-group">
           <label id="form-label">Direccion</label>
-          <input type="text"  class="form-control" id="password" name="direccion" value={{ usuario.direccion }}>
+          <input type="text"  class="form-control" value={{ usuario.direccion }}>
         </div>
         <br>
-
         <button type="submit" id="boton">Modificar cuenta</button>
         {% if feedback %}
         <p class="text-danger float-right">{{ feedback }}</p>
         {% endif %}
       </form>
+      <br>
+      <form action="/monitorizacion" method="GET">
+        <button type="submit" id="boton">Monitorizacion</button>
+      </form>
     </div>
   </div>
 </div>
-
 {% endblock %}
