--- a/rpiBroker/static/styles/style.css
+++ b/rpiBroker/static/styles/style.css
@@ -131,9 +131,8 @@ html,
         background-image: url(https://image.freepik.com/free-vector/business-data-analytics-robotic-process-automation-concept-virtual-screen-wireframed-cyborg-hand-touching-digital-interface_127544-1149.jpg);
     }
 
-    #main-incidencias,
-    #nueva-image {
-        background-image: url(https://c1.wallpaperflare.com/preview/447/559/773/laser-cutting-machine-plasma.jpg);
+    #moni-image{
+        background-image: url(https://cdn.nextgov.com/media/img/upload/2020/03/25/NGai20200325/route-fifty-lead-image.jpg);
     }
 
     #detalle-image {
@@ -252,7 +251,7 @@ html,
         #nav a span {
             display: block;
             position: absolute;
-            background: #222222;
+            background: #b905e6;
             color: #ffffff;
             top: -2.75em;
             font-size: 0.3em;
@@ -272,6 +271,33 @@ html,
                 opacity: 1.0;
                 color:#F402A3 ;
             }
+
+            table {
+                width: 100%;
+                padding: 30px;
+            }
     
+            table.default tbody tr {
+                border-bottom: solid 1px #f4f4f4;
+            }
     
+            table.default td {
+                padding: 0.5em 1em 0.5em 1em;
+            }
+    
+            table.default th {
+                text-align: left;
+                font-weight: 400;
+                padding: 0.5em 1em 0.5em 1em;
+            }
+    
+            table.default thead {
+                border-bottom: solid 2px #f4f4f4;
+            }
+            
+            #LogOut{   
+                margin-top: 10px;
+                margin-right: 30px;
+            }
+       
     
