--- a/rpiBroker/templates/monitorizacion.html
+++ b/rpiBroker/templates/monitorizacion.html
@@ -1,7 +1,68 @@
 {% extends "base.html" %}
 {% block titulo %}Index{% endblock %} 
-{% block contenido %}
-<div class="container">
 
+
+
+{% block contenido %}
+<div class="contenido-main" id="moni-image">
+<table class="tabla">
+    <colgroup>
+             <col span="4">
+         <thead>
+             <tr>
+                 <td>Fecha</td>
+                 <td>Temperatura</td>
+             </tr>
+         </thead>
+
+         <tbody>
+             {% for temp in mediciones_temperatura %}
+             <tr>
+                 <td>{{temp.fecha}}</td>
+                 <td>{{temp.temperatura_ambiente}}</td>
+                 <td><a id="eliminar" href = "http://127.0.0.1:8000/miApp/clienteeliminar/{{cli.id}}">
+                         <img src="https://static.vecteezy.com/system/resources/previews/000/442/652/non_2x/delete-vector-icon.jpg" width="38px">
+                 </a></td>
+                 <td><a id="editar" href = "http://127.0.0.1:8000/miApp/clienteeditar/{{cli.id}}">
+                         <img src="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-pencil-icon-png-image_4152536.jpg" width="35px">
+                 </a></td>
+
+             </tr>
+             {% endfor %}
+         </tbody>
+</table>
+
+
+
+<table class="tabla">
+    <colgroup>
+             <col span="4">
+         <thead>
+             <tr>
+                 <td>Fecha</td>
+                 <td>Eje X</td>
+                 <td>Eje Y</td>
+                 <td>Eje Z</td>
+             </tr>
+         </thead>
+
+         <tbody>
+             {% for acc in medicionAcelerometro %}
+             <tr>
+                 <td>{{acc.fecha}}</td>
+                 <td>{{acc.eje_x}}</td>
+                 <td>{{acc.eje_y}}</td>
+                 <td>{{acc.eje_z}}</td>
+                 <td><a id="eliminar" href = "http://127.0.0.1:8000/miApp/clienteeliminar/{{cli.id}}">
+                         <img src="https://static.vecteezy.com/system/resources/previews/000/442/652/non_2x/delete-vector-icon.jpg" width="38px">
+                 </a></td>
+                 <td><a id="editar" href = "http://127.0.0.1:8000/miApp/clienteeditar/{{cli.id}}">
+                         <img src="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-pencil-icon-png-image_4152536.jpg" width="35px">
+                 </a></td>
+
+             </tr>
+             {% endfor %}
+         </tbody>
+</table>
 </div>
 {% endblock %}
