--- a/rpiBroker/static/styles/style.css
+++ b/rpiBroker/static/styles/style.css
@@ -120,7 +120,7 @@ html,
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        color: #ffffb3;
+        color: #ffffff;
     }
 
     #index-image {
@@ -151,11 +151,11 @@ html,
 
     #form-titulo-background,
     #form-background {
-        color: #ffffb3;
+        color: #ffffff;
     }
 
     #tabla-lista-incidencias {
-        color: #ffffb3;
+        color: #ffffff;
         background-color: #333;
         padding: 10px;;
         opacity: 0.8;
