--- a/rpiBroker/static/styles/style.css
+++ b/rpiBroker/static/styles/style.css
@@ -279,6 +279,7 @@ html,
     
             table.default tbody tr {
                 border-bottom: solid 1px #f4f4f4;
+                text-align: center;
             }
     
             table.default td {
@@ -286,7 +287,7 @@ html,
             }
     
             table.default th {
-                text-align: left;
+                text-align: center;
                 font-weight: 400;
                 padding: 0.5em 1em 0.5em 1em;
             }
@@ -299,5 +300,27 @@ html,
                 margin-top: 10px;
                 margin-right: 30px;
             }
+
+            thead td {
+                font-weight:bolder;
+                color: #0155a3 ;
+                font-size: 18px;
+
+                }
+
+            .productos{
+                display:block;
+                margin:0 30px 0 0;
+                width:250px;
+                   }
+
+            .clear{
+                display:block;
+                clear:both;
+                }     
+                
+            #productos {
+                display: inline-block;
+            }    
        
     
